--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ####################################################
 # application.properties for PostgreSQL
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/minhasmedicacoes_db
-spring.datasource.username=admin
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/horadoremedio_bd
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
