--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 # application.properties for PostgreSQL
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/horadoremedio_bd
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=postgresql
+spring.datasource.password=postgresql
+
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
@@ -19,3 +20,4 @@ spring.jpa.hibernate.format_sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.default_schema=public
