Add as funcionalidades crud para a classe HoraMedicamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # application.properties for PostgreSQL
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost:5432/horadoremedio
-spring.datasource.username=postgresql
-spring.datasource.password=postgresql
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
